[package]
name = "restricted-exec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "restricted-exec"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
landlock = "0.4"
libc = "0.2"
goblin = "0.10"
libseccomp = "0.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

